:lipstick: - fix: fix a bug where a dropdown was rendered with an incorrect z-index

--- a/src/components/toolbar/toolbar.scss
+++ b/src/components/toolbar/toolbar.scss
@@ -11,7 +11,7 @@
   row-gap: 12px;
   text-align: start;
   width: 100%;
-  z-index: 1;
+  z-index: 10;
 
   &--compact {
     gap: 0;
